<resources>
    <string name="app_name">Project_StudentManagement_Android</string>
    <string name="forget_password">FORGET PASSWORD</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="_84_xxxxxxxxx">+84 xxxxxxxxx</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="enter_the_otp_send_to">Enter the OTP send to</string>
    <string name="didn_t_recive_otp">Didn\'t recive OTP?</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="hello">hello</string>
    <string name="the">The</string>
    <string name="search">Search</string>
    <string name="personal">Personal</string>
    <string name="calender">Calender</string>
    <string name="count">Count</string>
    <string name="subject">Subject</string>
    <string name="id_student">ID</string>
    <string name="id_class">ID CLASS</string>
    <string name="scores_average">AVERAGE</string>
    <string name="scores_finnal">FINNAL</string>
    <string name="scores_middle">MIDDLE</string>
</resources>